Fix icon vertical-align that made buttons mis-align

--- a/app/assets/stylesheets/_icons.scss
+++ b/app/assets/stylesheets/_icons.scss
@@ -326,7 +326,7 @@
   width: 18px;
   height: 18px;
   line-height: 18px;
-  vertical-align: text-top;
+  vertical-align: top;
   margin:0px 2px 0px 2px;
   background-position: 0px 0px;
   background-repeat: no-repeat;
